force-app/main/default/objects/RDInletGasketPartNumber__c/RDInletGasketPartNumber__c.object-meta.xml
<CustomObject>
    <label>RDInletGasketPartNumber</label>
    <nameField>
        <label>RDInletGasketPartNumber</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDInletGasketPartNumber</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>