force-app/main/default/objects/RDInletGasketPartNumber__c/fields/InletGasketPartNumber__c.field-meta.xml
<CustomField>
    <fullName>InletGasketPartNumber__c</fullName>
    <label>InletGasketPartNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>