force-app/main/default/objects/RDInletGasketPartNumber__c/fields/TefSealThickLL__c.field-meta.xml
<CustomField>
    <fullName>TefSealThickLL__c</fullName>
    <label>TefSealThickLL</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>