force-app/main/default/objects/RDInletGasketPartNumber__c/fields/TempUL__c.field-meta.xml
<CustomField>
    <fullName>TempUL__c</fullName>
    <label>TempUL</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>