force-app/main/default/objects/RDInletGasketPartNumber__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PTC__c</columns>
    <columns>STC__c</columns>
    <columns>SZC__c</columns>
    <columns>TempLL__c</columns>
    <columns>TempUL__c</columns>
    <columns>InletGasketPartNumber__c</columns>
    <columns>AssyThickLL__c</columns>
    <columns>AssyThickUL__c</columns>
    <columns>DiscThckLL__c</columns>
    <columns>DiscThckUL__c</columns>
    <columns>DSCVAR__c</columns>
    <columns>MCIG__c</columns>
    <columns>TefSealThickLL__c</columns>
    <columns>SourceCode__c</columns>
    <columns>TefSealThickUL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MCIG__c</field>
        <operation>equals</operation>
        <value>070</value>
    </filters>
    <label>All</label>
</ListView>